# rea_project

./: README.md  main.py  pyproject.toml  requirements.txt  utils.py
.junie/: guideline.md
agent/: PropFinderAgent.py  QueryScrapperWrapper.py  REAgent.py  State.py  SubmitFinalAnswer.py  SupervisorAgent.py
raw/: properties.json
studio/: langgraph.json  properties.db
studio/agent/: PropFinderAgent.py  PropFinderAgent3.py  SupervisorAgent.py
studio/raw/: properties.json
tests/: test_json_search_tool.py  test_utils_db.py
tools/: json_search_tool.py
