[project]
name = "rea-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "langchain-core~=1.0",
  "langchain-openai~=1.0",
  "langchain-community~=0.4",
  "langgraph~=1.0",
  "pydantic~=2.11",
  "ipython~=9.6",
  "gradio~=5.49",
  "python-dotenv~=1.2",
  "nest-asyncio~=1.6",
  "playwright~=1.55",
  "openai~=2.7",
  "langchain>=1.0.3",
  "langchain-anthropic>=1.0.1",
  "pytest==8.4.2",
  "pytest-asyncio~=0.24",
  "langgraph-checkpoint-sqlite>=3.0.0",
]
